# meowtype

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md  package-lock.json
client/: esbuild.config.mjs  global.d.ts  package-lock.json  package.json  prettier.config.cjs  tsconfig.json
client/src/: index.ts
client/src/components/: typing.ts
client/src/components/typing-modes/default/: caret.ts  state.ts  typing.ts
client/src/constants/: default-config.ts  words.ts
client/src/lib/state/: observer.ts
client/src/lib/utils/: array.ts  cache.ts  config.ts  dom.ts  local-storage-with-schema.ts  logger.ts  misc.ts  string.ts  styles.ts  time.ts  words.ts
client/src/schemas/: config.ts
client/src/styles/: resets.scss  root.scss  typing.scss
client/src/styles/functions/: _index.scss  _maps.scss
client/src/styles/mixins/: _box.scss  _colors.scss  _common.scss  _fonts.scss  _index.scss
client/src/styles/variables/: _colors.scss  _index.scss  _sizes.scss  _spacing.scss
src/: lib.rs  main.rs  site_metadata.rs
src/routes/: index.rs
templates/: index.html.hbs
