[package]
name = "meowtype"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_builder = "0.20.1"
rand = "0.8.5"
rocket = { version = "0.5.1", features = ["json"] }
rocket_dyn_templates = { version = "0.2.0", features = ["handlebars"] }
rocket_ws = "0.1.1"
serde = "1.0.210"
serde_json = "1.0.128"

